--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "extendable-media-recorder": "^9.1.3",
+    "mp4box": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "wavesurfer": "^1.3.4",
+    "wavesurfer.js": "^7.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
